--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="username_or_email">Имя пользователя или почта</string>
     <string name="open_profile_menu">Открыть меню профиля</string>
+    <string name="read">Читать</string>
 </resources>
